--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,23 +1,16 @@
 <link rel="stylesheet" href="/assets/css/profile.css">
 
 <div class="profile-container">
-    <div class="left-container">
-        <div class="profile-header">
-            <div class="profile-image">
-                <img src="{{profileImageUrl}}" alt="Profile Image of {{userName}}">
-            </div>
-            <div class="profile-info">
-                <h1>{{userName}}</h1>
-                <p>{{userDescription}}</p>
-            </div>
+    <div class="profile-header">
+        <div class="profile-image">
+            <img src="{{profileImageUrl}}" alt="Profile Image of {{userName}}">
         </div>
-        <form action="/api/profile/upload-photo" method="POST" enctype="multipart/form-data" class="upload-form">
-            <label for="profileImage">Upload Profile Image:</label>
-            <input type="file" id="profileImage" name="profileImage" accept="image/*">
-            <button type="submit">Upload Image</button>
-        </form>
+        <div class="profile-info">
+            <h1>{{userName}}</h1>
+            <p>{{userDescription}}</p>
+        </div>
     </div>
-    <div class="right-container">
+    <div class="profile-creations">
         <h2>Creations</h2>
         {{#each creations}}
         <div class="creation-item">
