--- a/views/partials/gameCard.handlebars
+++ b/views/partials/gameCard.handlebars
@@ -1,4 +1,4 @@
-<div class="gamecard">
+<div class="gamecard" id="{{Id}}">
     <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg">
         <div class="card-body">
